# BICUBIC_FLUTTER

./: .gitignore  .pubignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml
android/: CMakeLists.txt  build.gradle
doc/: api.md
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: flutter_bicubic_resize.podspec
ios/flutter_bicubic_resize/: Package.swift
ios/flutter_bicubic_resize/Sources/flutter_bicubic_resize/: FlutterBicubicResizePlugin.m
ios/flutter_bicubic_resize/Sources/flutter_bicubic_resize/include/flutter_bicubic_resize/: resize.h
lib/: flutter_bicubic_resize.dart
lib/src/: bicubic_resizer.dart  native_bindings.dart
macos/: flutter_bicubic_resize.podspec
macos/Classes/: FlutterBicubicResizePlugin.m  resize.c
macos/Classes/include/: cocoapods_flutter_bicubic_resize.modulemap
macos/Classes/include/flutter_bicubic_resize/: resize.h
src/: resize.c  resize.h
test/: bicubic_resizer_test.dart
